# physical-ai-textbook

./: BETTER_AUTH_IMPLEMENTATION.md  DEPLOYMENT.md
.github/workflows/: ci.yml  deploy-backend.yml  deploy-pages.yml  index-content.yml
.kiro/specs/physical-ai-textbook/: design.md  requirements.md  tasks.md
backend/: .env.example  .gitignore  Dockerfile  README.md  README_HF.md  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/db/: __init__.py  postgres.py  qdrant.py
backend/app/models/: __init__.py  base.py  chat.py  content.py  user.py
backend/app/routers/: __init__.py  auth.py  better_auth.py  chat.py  health.py  personalize.py  translate.py
backend/app/services/: __init__.py  auth_service.py  content_parser.py  context_builder.py  embedding_service.py  indexer_service.py  personalization_service.py  query_processor.py  rag_service.py  response_generator.py  retriever_service.py  translation_service.py
backend/migrations/: 001_initial_schema.sql  002_content_tables.sql  runner.py
backend/scripts/: index_content.py  recreate_qdrant_collection.py
backend/tests/: test_auth.py  test_chat_history.py  test_content_parser.py  test_db.py  test_main.py  test_personalization.py  test_rag_response.py  test_retrieval.py  test_translation.py
textbook/: BETTER_AUTH.md  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
textbook/.github/workflows/: deploy.yml
textbook/docs/: intro.md
textbook/docs/_templates/: chapter-template.mdx
textbook/src/: config.ts
(+78 files in other folders)
